--- a/test_oa_project/www/Templets/System/Order/discountList.html
+++ b/test_oa_project/www/Templets/System/Order/discountList.html
@@ -123,7 +123,7 @@
 				</div>	
 				<div class="preRows clearfix">
 					<span>截止日期：</span>
-            		<input type="text" class="discount-atime" name="typetime" value="" readonly="readonly" placeholder="请选择日期">
+            		<input type="text" class="discount-etime" name="typetime" value="" readonly="readonly" placeholder="请选择日期">
 				</div>
 				<div class="preRows clearfix">
 					<div class="preBtns">
@@ -216,7 +216,7 @@
 					</select>
 				</div>
 				<div class="preRows clearfix">
-					<span>日期：</span>
+					<span>截止日期：</span>
             		<input type="text" class="discount-etime" name="edit_typetime" value="" readonly="readonly" placeholder="请选择日期">
 				</div>
 				<div class="preRows clearfix">
