--- a/www/Templets/Common/Html/post_oss.html
+++ b/www/Templets/Common/Html/post_oss.html
@@ -21,7 +21,7 @@
         width: 0;
     }
     #fileupload{
-        width: 90px;
+        width:73px;
         height: 30px;
         filter:alpha(opacity=0);  /* ie 有效*/
         -moz-opacity:0; /* Firefox  有效*/
@@ -30,7 +30,7 @@
         top: 0px;
         left: 0px;
         z-index: 2;
-        cursor:pointer;
+        cursor:default;
     }
 </style>
 
