--- a/www/Templets/System/Information/systemUserInfo.html
+++ b/www/Templets/System/Information/systemUserInfo.html
@@ -58,9 +58,9 @@
 										</if>
 									</div>
 									<div class="mcRowRight">
-										<div class="uploadBox" style="position: relative; height: 31px; margin-top: 70px;">
-											<span style="position: absolute;z-index: 1;">修改头像</span>
-											<input type="file" name="file" autocomplete="off" id="fileupload" class="imUploadBtn" value="" style="position: absolute;z-index: 2;width: 73px;">
+										<div class="uploadBox">
+											<span>修改头像</span>
+											<input type="file" name="file" autocomplete="off" id="fileupload" class="imUploadBtn" value="">
 											<input type="hidden" name="" id="img_src" class="faceImg">
 										</div>
 									</div>
