--- a/www/Templets/System/Order/discountList.html
+++ b/www/Templets/System/Order/discountList.html
@@ -123,7 +123,7 @@
 				</div>	
 				<div class="preRows clearfix">
 					<span>截止日期：</span>
-            		<input type="text" class="discount-etime" name="typetime" value="" readonly="readonly" placeholder="请选择日期">
+            		<input type="text" class="discount-atime" name="typetime" value="" readonly="readonly" placeholder="请选择日期">
 				</div>
 				<div class="preRows clearfix">
 					<div class="preBtns">
