--- a/www/Templets/System/Index/index.html
+++ b/www/Templets/System/Index/index.html
@@ -80,6 +80,7 @@
 </div>
 
 
+<a class="href_url"></a>
 <script language="javascript" type="text/javascript" src="__PUBLIC__/js/jquery-1.8.3.min.js"></script>
 <script language="javascript" type="text/javascript" src="__PUBLIC__/js/jquery.mousewheel.js"></script>
 <script type="text/javascript" src="__PUBLIC__/js/artDialog/jquery.artDialog.js?skin=default"></script>
