--- a/www/Templets/System/Information/msgList.html
+++ b/www/Templets/System/Information/msgList.html
@@ -46,7 +46,7 @@
 
         </div>
     </div>
-
+    <a class="href_url"></a>
 </div>
 <script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
 <script src="__PUBLIC__/js/layui/layui.js"></script>
@@ -123,7 +123,6 @@
                 };
             };
         }, function(){});
-
         e.stopPropagation();
     });
     //TAB
