--- a/www/Templets/System/Information/msgList.html
+++ b/www/Templets/System/Information/msgList.html
@@ -71,7 +71,7 @@
             <div class="list_content">
                 {{ v.content }}
                 {{#  if(v.href){ }}
-                <a href="{{ v.href }}" style="color: #0055aa" target="_blank">查看详情</a>
+                <a href="{{ v.href }}" class="view-details" target="_blank">查看详情</a>
                 {{#  }; }}
             </div>
         </div>
